# RoboGuideDog

./: README.md
dog_ws/src/a1_slamrplidar_ros/slam_planner/: CMakeLists.txt  README.md  package.xml
dog_ws/src/a1_slamrplidar_ros/slam_planner/cfg/: slam_planner_online.rviz  slam_planner_test.rviz
dog_ws/src/a1_slamrplidar_ros/slam_planner/include/slam_planner/: convert.h  slam_planner.h
dog_ws/src/a1_slamrplidar_ros/slam_planner/launch/: slam_planner_online.launch  slam_planner_simulation.launch  slam_rplidar_start.launch
dog_ws/src/a1_slamrplidar_ros/slam_planner/maps/: test.yaml
dog_ws/src/a1_slamrplidar_ros/slam_planner/params/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  nav_obstacles_params.yaml
dog_ws/src/a1_slamrplidar_ros/slam_planner/src/: slam_base_controller.cpp  slam_planner.cpp
dog_ws/src/a1_slamrplidar_ros/slam_planner_sdk/: CMakeLists.txt  package.xml
dog_ws/src/a1_slamrplidar_ros/slam_planner_sdk/include/unitree_legged_sdk/: comm.h  loop.h  quadruped.h  udp.h
dog_ws/src/a1_slamrplidar_ros/slamware_ros_sdk/: CMakeLists.txt  LICENSE  README.md  package.xml
dog_ws/src/a1_slamrplidar_ros/slamware_ros_sdk/cfg/diff_drive/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
dog_ws/src/a1_slamrplidar_ros/slamware_ros_sdk/include/slamware_ros_sdk/: slamware_ros_sdk_client.h  utils.h
dog_ws/src/a1_slamrplidar_ros/slamware_ros_sdk/launch/: slamware_ros_sdk_intergated_with_teb.launch  slamware_ros_sdk_server_and_view.launch  slamware_ros_sdk_server_node.launch  slamware_ros_sdk_server_node_datapub.launch  view_slamware_ros_sdk_server_node.launch  view_slamware_ros_sdk_server_node_datapub.launch
dog_ws/src/a1_slamrplidar_ros/slamware_ros_sdk/msg/: ActionDirection.msg  ArtifactUsage.msg  BasicSensorInfo.msg  BasicSensorInfoArray.msg  BasicSensorValue.msg  BasicSensorValueData.msg  BasicSensorValueDataArray.msg  CancelActionRequest.msg  ClearLinesRequest.msg  ClearMapRequest.msg  ImpactType.msg  Line2DFlt32.msg  Line2DFlt32Array.msg  LocalizationMovement.msg  LocalizationOptions.msg  MapKind.msg  MoveByDirectionRequest.msg  MoveByThetaRequest.msg  MoveLineRequest.msg  MoveLinesRequest.msg  MoveOptionFlag.msg  MoveOptions.msg  MoveToLocationsRequest.msg  MoveToRequest.msg  OptionalBool.msg  OptionalFlt32.msg  OptionalFlt64.msg  OptionalInt16.msg  OptionalInt32.msg  OptionalInt64.msg  OptionalInt8.msg  OptionalLocalizationMovement.msg  OptionalUInt16.msg  OptionalUInt32.msg  OptionalUInt64.msg  OptionalUInt8.msg  RecoverLocalizationRequest.msg  RectFlt32.msg  RectInt32.msg  RemoveLineRequest.msg  (+8 more)
dog_ws/src/a1_slamrplidar_ros/slamware_ros_sdk/rviz/: slamware_ros_sdk_server_node.rviz  slamware_ros_sdk_server_node_datapub.rviz  slamware_ros_sdk_teb.rviz
dog_ws/src/a1_slamrplidar_ros/slamware_ros_sdk/src/client/: slamware_ros_sdk_client.cpp
dog_ws/src/a1_slamrplidar_ros/slamware_ros_sdk/src/server/: msg_convert.cpp  msg_convert.h  server_map_holder.cpp  server_map_holder.h  server_params.cpp  server_params.h  server_work_data.cpp  server_work_data.h  server_worker_base.cpp  server_worker_base.h  server_workers.cpp  server_workers.h  slamware_ros_sdk_server.cpp  slamware_ros_sdk_server.h  slamware_ros_sdk_server_node.cpp
dog_ws/src/a1_slamrplidar_ros/slamware_ros_sdk/srv/: SyncGetStcm.srv  SyncSetStcm.srv
dog_ws/src/a1_slamrplidar_ros/slamware_sdk/: CMakeLists.txt  package.xml
dog_ws/src/a1_slamrplidar_ros/slamware_sdk/include/boost/config/: auto_link.hpp
dog_ws/src/a1_slamrplidar_ros/slamware_sdk/include/boost/interprocess/ipc/: message_queue.hpp
dog_ws/src/a1_slamrplidar_ros/slamware_sdk/include/json/: reader.h  writer.h
dog_ws/src/a1_slamrplidar_ros/slamware_sdk/include/rpos/: rpos.h  rpos_config.h  rpos_version.h
dog_ws/src/a1_slamrplidar_ros/slamware_sdk/include/rpos/app/: robot_application.h  slamware_robot_application.h
dog_ws/src/a1_slamrplidar_ros/slamware_sdk/include/rpos/core/: action.h  angle_math.h  channel.h  core.h  device.h  device_manager.h  diagnosis_info.h  door_description.h  endpoint.h  feature.h  feature_manager.h  geometry.h  home_description.h  laser_point.h  message.h  message_payload.h  parameter.h  pose.h  protocol.h  robot_platform.h  rpos_core_config.h  sensor.h  sensor_type.h  system_event.h
dog_ws/src/a1_slamrplidar_ros/slamware_sdk/include/rpos/core/detail/: geometry_line.h  geometry_matrix.h  geometry_rectangle.h
dog_ws/src/a1_slamrplidar_ros/slamware_sdk/include/rpos/features/: artifact_provider.h  features.h  impact_sensor_feature.h  lidar_feature.h  location_provider.h  motion_planner.h  slamware_base_lidar_feature.h  statistics_provider.h  sweep_motion_planner.h  system_resource.h
dog_ws/src/a1_slamrplidar_ros/slamware_sdk/include/rpos/features/artifact_provider/: feature.h
dog_ws/src/a1_slamrplidar_ros/slamware_sdk/include/rpos/features/location_provider/: feature.h  map.h  points_map.h
dog_ws/src/a1_slamrplidar_ros/slamware_sdk/include/rpos/features/motion_planner/: feature.h  move_action.h  path.h  velocity_control_move_action.h
dog_ws/src/a1_slamrplidar_ros/slamware_sdk/include/rpos/features/statistics_provider/: feature.h
dog_ws/src/a1_slamrplidar_ros/slamware_sdk/include/rpos/features/sweep_motion_planner/: feature.h  (+2 more)
dog_ws/src/a1_slamrplidar_ros/slamware_sdk/include/rpos/message/: base_messages.h  depth_camera_messages.h  impact_messages.h  imu_messages.h  lidar_messages.h  message.h  motor_messages.h
dog_ws/src/a1_slamrplidar_ros/slamware_sdk/include/rpos/robot_platforms/: slamware_agent_platform.h  slamware_common_exception.h  slamware_core_platform.h  slamware_error_code.h  slamware_http_error_code.h  slamware_http_exception.h  slamware_sdp_exception.h  slamware_sdp_platform.h  slamware_sdp_platform_config.h
dog_ws/src/a1_slamrplidar_ros/slamware_sdk/include/rpos/system/: byte_order.h  exception.h  fraction.h  generic_map.h  object_handle.h  os.h  signal.h  system.h  target_info.h  this_thread.h  thread_pool.h  thread_priority.h  types.h
(+115 files in other folders)
